<resources>
    <string name="app_name">PopularMovies</string>
    <string name="error_message">Failed to load movie data</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_sort_rating">Sort by rating</string>
    <string name="menu_sort_popularity">Sort by popularity</string>
    <string name="release_date">Release date: %1s</string>
    <string name="user_rating">Rating: %1.1f/10</string>
    <string name="mark_favorite">Mark as favorite</string>
    <string name="play_trailer">Play trailer</string>
    <string name="viewer_reviews">Viewer reviews</string>
</resources>
