<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="1"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/menu_sort_rating"
        android:orderInCategory="2"
        android:title="@string/menu_sort_rating"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_sort_popularity"
        android:orderInCategory="3"
        android:title="@string/menu_sort_popularity"
        app:showAsAction="never"/>

</menu>